[tool.poetry]
name = "pacman"
version = "0.1.0"
description = "Pacman game"
authors = ["DenisioMytnysiano <den.mytnyk@ua.fm>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
